Fixed overlapping fixed elements.

--- a/sass/components/_admin_menu.scss
+++ b/sass/components/_admin_menu.scss
@@ -1,10 +1,10 @@
 html body.admin-menu {
-  margin-top: 44px !important;
+  margin-top: 42px !important;
 }
 
 #admin-menu-wrapper {
   font-size:0.7rem !important;
-  
+
   span, a {
     font-size:0.7rem !important;
   }
