--- a/sass/components/_brand.scss
+++ b/sass/components/_brand.scss
@@ -3,15 +3,14 @@
   @include add-gutter(0);
 
   position: absolute;
-  left: 0;
-  top: -.4em;
-
+  top: -2em;
+  z-index: $z-gamma;
   background-color: transparent;
   width: 100%;
-  z-index: $z-gamma;
 
   @include mq($bp-tablet-s) {
-    top: 3em;
+    top: 2em;
+
   }
 }
 
@@ -54,6 +53,7 @@
 
   display: block;
   position: relative;
+  top: 0;
   overflow: hidden;
 
   height: 40px;
